# music-sync

./: .gitignore  Dockerfile  Justfile  README.md  compose.prod.yaml  compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 185377bd52f0_.py  41bfd7f5538c_.py  5e57a4a17d0e_.py  6067d9029f6d_.py  844a39922003_.py  94e08c7ed930_create_user.py  a7dbaefd4fca_.py  e7efd6070f2d_.py
app/: celery_app.py  config.py  db.py  depends.py  exception_handlers.py  logger.py  main.py  middlewares.py  schemas.py  types.py  utils.py  yandex.py
app/spotify/: __init__.py  api.py  calls.py  client.py  crud.py  depends.py  exception_handlers.py  exceptions.py  models.py  oauth.py  router.py  routes.py  schemas.py  service.py  utils.py
app/sync/: models.py  router.py  routes.py
app/tasks/: add_track_task.py
app/users/: models.py  routes.py  schemas.py  service.py
app/yandex/: api.py  client.py  depends.py  models.py  router.py  routes.py  schemas.py
