[tool.poetry]
name = "music-sync"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
celery = "^5.4.0"
pydantic = "^2.10.4"
redis = "^5.2.1"
pydantic-settings = "^2.7.0"
yandex-music = "^2.2.0"
black = "^24.10.0"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
