[project]
name = "music-sync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "celery==5.4.0",
    "fastapi==0.115.6",
    "httpx[http2]>=0.28.1",
    "loguru>=0.7.3",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "redis==5.2.1",
    "ruff>=0.11.4",
    "uvicorn==0.34.0",
    "yandex-music==2.2.0",
]
